--- a/overlay/dip-2a-3_post.dts
+++ b/overlay/dip-2a-3_post.dts
@@ -50,66 +50,23 @@
 / {
 	compatible = "nextthing,chip", "allwinner,sun5i-r8";
 	
-	/* Enable our SDIO pins	*/
-	fragment@0 {
-		target = <&pio>;
-		__overlay__ {
-			chip_sdio_pins: mmc2@42 {
-				allwinner,pins = "PE4", "PE5", "PE6", "PE7", "PE8", "PE9";
-				allwinner,function = "mmc2";
-				allwinner,drive = <SUN4I_PINCTRL_30_MA>;
-				allwinner,pull = <SUN4I_PINCTRL_PULL_UP>;
-			};
-			chip_sdio_cd: mmc2_cd@0 {
-				allwinner,pins = "PB3";
-				allwinner,function = "gpio_in";
-				allwinner,drive = <SUN4I_PINCTRL_10_MA>;
-				allwinner,pull = <SUN4I_PINCTRL_PULL_UP>;
-			};
-		};
-	};
-	
-	/*	Enable our SDIO device	*/
-	fragment@1 {
-		target = <&mmc2 >;
-		__overlay__ {
-			vmmc-supply = <&reg_vcc3v3>;
-			vqmmc-supply = <&reg_vcc3v3>;
-			pinctrl-names = "default";
-			compatible = "allwinner,sun5i-a13-mmc";
-			pinctrl-0 = <&chip_sdio_pins>, <&chip_sdio_cd>;
-			cd-gpios = <&pio 1 3 GPIO_ACTIVE_HIGH>;
-			cd-inverted; // it is low active, but this is somehow wrong
-			bus-width = <4>;
-			clocks = <&ahb_gates 10>,<&mmc2_clk 0>,<&mmc2_clk 1>,<&mmc2_clk 2>;
-			status = "okay";
-		};
-	};
-
-
-	fragment@2 {
-		target = <&i2c0_pins_a>;
-		__overlay__ {
-			allwinner,pull = <SUN4I_PINCTRL_PULL_UP>;
-		};
-	};
-
-	// enabled pin expander on i2c0
+	// enabled pin expander on i2c1
 	fragment@3 {
-		target = <&i2c0>;
+		target = <&i2c1>;
 		__overlay__ {
 			#address-cells = <1>; // one 32bit value for reg
 			#size-cells = <0>; // no size value following the address in reg
-			csp_keys:csp_keys@1 {
+			csp_keys:gpio@0 {
 				compatible = "nxp,pca9555";
+				reg = <0x20>;
+
+				gpio-controller;
+				#gpio-cells = <2>;
+
 				interrupt-parent = <&pio>;
 				interrupts = <6 1 IRQ_TYPE_EDGE_FALLING>; // "PG1"
-				#interrupt-cells = <3>;
-				gpio-controller;
-				pinctrl-names = "default";
-				pinctrl-0 = <&i2c0_pins_a>;	//  "PB0", "PB1";
-				reg = <0x20>;
-				status = "okay";
+				interrupt-controller;
+				#interrupt-cells = <2>;
 			};
 		};
 	};
@@ -123,7 +80,6 @@
 				autorepeat;
 				#address-cells = <1>;
 				#size-cells = <0>;
-				status = "okay";
 				
 				// define buttons
 				button@00 {
@@ -210,8 +166,5 @@
 		};
 	};
 
-	__overrides__ {
-		mykeypad = <&mykeypad>,"status";
-	};
 
 };
