--- a/overlay/dip-2a-3_post.dts
+++ b/overlay/dip-2a-3_post.dts
@@ -50,6 +50,49 @@
 / {
 	compatible = "nextthing,chip", "allwinner,sun5i-r8";
 	
+	/* 	 Enable our SDIO pins		 */
+	fragment@0 {
+		target = <&pio>;		
+		__overlay__ {
+
+			chip_sdio_pins: mmc2@42 {
+				allwinner,pins = "PE4", "PE5", "PE6", "PE7", "PE8", "PE9";
+				allwinner,function = "mmc2";
+				allwinner,drive = <SUN4I_PINCTRL_30_MA>;
+				allwinner,pull = <SUN4I_PINCTRL_PULL_UP>;
+			};
+
+			chip_sdio_cd: mmc2_cd@0 {
+				allwinner,pins = "PB3";
+				allwinner,function = "gpio_in";
+				allwinner,drive = <SUN4I_PINCTRL_10_MA>;
+				allwinner,pull = <SUN4I_PINCTRL_PULL_UP>;
+			};
+			
+		};
+	};
+
+
+	/*	 Enable our SDIO device	 */
+	fragment@1 {
+		target = <&mmc2 >;
+
+		__overlay__ {
+			vmmc-supply = <&reg_vcc3v3>;
+			vqmmc-supply = <&reg_vcc3v3>;
+			// everything below this like is default, but I'll set it to be sure
+			pinctrl-names = "default";
+			compatible = "allwinner,sun5i-a13-mmc";
+			pinctrl-0 = <&chip_sdio_pins>,  <&chip_sdio_cd>;
+			cd-gpios = <&pio 1 3 GPIO_ACTIVE_HIGH>;
+			cd-inverted; // it is low active, but this is somehow wrong
+			bus-width = <4>;
+                        clocks = <&ahb_gates 10>,<&mmc2_clk 0>,<&mmc2_clk 1>,<&mmc2_clk 2>;
+			// and go!
+			status = "okay";
+		};
+	};
+
 	// enabled pin expander on i2c1
 	fragment@3 {
 		target = <&i2c1>;
